<resources>
    <string name="app_name">MyHall</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="change_password">Change Password</string>
    <string name="register">Register Me!</string>

    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>

    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="no_record_found">No Record Found</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="network_error_occurred">Network Error Occurred</string>
    <string name="internal_error_occurred">Internal Error Occurred</string>
    <string name="action_failed">Action Failed</string>
    <string name="success">Success</string>
    <string name="successful">Successful</string>

    <string name="create">Create</string>
    <string name="contact">Contact</string>
    <string name="update">Update</string>
    <string name="add_member">Add Member</string>
    <string name="submit">Submit</string>

    <string name="create_family">Create Family</string>

    <string name="hint_type_here">Type here....</string>

    <string name="no_result_found">No Result Found</string>
    <string name="primary_contact">Primary Contact</string>
    <string name="secondary_contact">Secondary Contact</string>
    <string name="relation">Relation</string>

    <string name="mother">Mother</string>
    <string name="father">Father</string>
    <string name="son">Son</string>
    <string name="daughter">Daughter</string>
    <string name="wife">Wife</string>
    <string name="husband">Husband</string>
    <string name="uncle">Uncle</string>
    <string name="aunt">Aunt</string>

    <string name="grandmother">Grandmother</string>
    <string name="grandfather">Grandfather</string>
    <string name="sister">Sister</string>
    <string name="brother">Brother</string>

    <string name="personal_details">Personal Details</string>

</resources>
