<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="@color/background_grey_e0"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/ic_group" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/profile_fragment_first_name"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="start|center"
                android:hint="@string/first_name"
                android:textColor="@color/text_color_primary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/profile_fragment_middle_name"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="start|center"
                android:hint="@string/middle_name"
                android:textColor="@color/text_color_primary"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/profile_fragment_last_name"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="start|center"
                android:hint="@string/last_name"
                android:textColor="@color/text_color_primary"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drop_shadow"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/password"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/profile_fragment_old_pass"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="start|center"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:textColor="@color/text_color_primary"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/profile_fragment_new_pass"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="start|center"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textColor="@color/text_color_primary"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/profile_fragment_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="start|center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/text_color_primary"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
